# Musage

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  FUTURE.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  UPDATER.md  dev-env.bat  dev-env.sh  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts  vitest.config.ts
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/codeplan/: 2026-06-15-extend-providers.md
docs/research/: 2026-06-16-closed-source-models-feasibility.md
scripts/: bump-version.cjs  download-winlibs-sf.ps1  download-winlibs.ps1  generate_icons.py  normalize-dist.cjs  strip-emoji-i18n.mjs  sync-version.cjs  validate-i18n-keys.sh
src/: assets.d.ts  icons.ts  main.ts  settings.css  settings.ts  styles.css  tokens.css  updater.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json  xiaomi-login.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.json  zh-CN.json
src-tauri/src/: api.rs  commands.rs  config.rs  lib.rs  logstore.rs  main.rs  poller.rs  poller_backoff.rs  tray.rs  xiaomi_login.rs
src-tauri/src/commands/: custom_sources.rs  extra_instances.rs  i18n.rs  mod.rs
src-tauri/src/config/: custom_sources.rs  extra_instances.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/providers/: claude_official.rs  custom.rs  deepseek.rs  kimi.rs  minimax.rs  mod.rs  novita.rs  openrouter.rs  parse.rs  qwen.rs  siliconflow.rs  stepfun.rs  tavily.rs  xiaomi.rs  zenmux.rs  zhipu.rs
src/i18n/: en.json  index.ts  zh-CN.json
src/settings/: about.ts  advanced.ts  api.ts  app.ts  config.ts  credentials.ts  custom-source-form.ts  extra-instance-form.ts  floating.ts  groups.ts  logos.ts  logs.ts  main.ts  modal.ts  order.test.ts  order.ts  providers.ts  region-wizard.ts  source-extras.ts  test.ts  types.ts  updater.ts  utils.ts
