[package]
name = "musage"
version = "0.1.0"
description = "MiniMax Token Plan 实时用量监控"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "musage_lib"
# Windows 上只用 staticlib 就够（main.rs 静态链接 musage_lib）。
# 删 cdylib 是为了绕过 MinGW ld 16-bit ordinal 表上限 —— Tauri 2 + GNU 工具链的已知坑
# （cargo 给 cdylib 自动生成的 .def 含 14 万+ 符号，ld 不让过）。
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"
chrono = "0.4"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "5"

# macOS 私有 API —— PinBottom 模式需要直接操作 NSWindow.level 把窗口
# 放到 kCGNormalWindowLevel - 1（所有正常 app 窗口之下），仅 macOS 需要。
# NSMenu feature：fullscreen watcher 通过 `NSMenu.menuBarVisible` 类方法
# 探测当前是否在全屏状态（菜单栏不可见 → 大概率是有 app 在全屏）。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSMenu"] }
objc2-core-graphics = { version = "0.3", features = ["CGWindowLevel", "CGGeometry"] }
# NSRect (= CGRect) 来自 objc2-core-foundation，开启对应 feature 后 NSGeometry alias 才生效。
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString", "objc2-core-foundation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
