[package]
name = "musage"
version = "0.2.1"
description = "MiniMax Token Plan 实时用量监控"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "musage_lib"
# Windows 上只用 staticlib 就够（main.rs 静态链接 musage_lib）。
# 删 cdylib 是为了绕过 MinGW ld 16-bit ordinal 表上限 —— Tauri 2 + GNU 工具链的已知坑
# （cargo 给 cdylib 自动生成的 .def 含 14 万+ 符号，ld 不让过）。
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
# v0.2.1 commit 7 (P2-B-8): Xiaomi/Claude cookie 失效时弹系统通知。
# 跟 update 走同一通道 —— plugin 本身是官方维护,只是 init() 一下即可。
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"
chrono = "0.4"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
# P0 国际化：rust-i18n 3.1.5 默认支持 JSON/YAML/TOML，不需指定 feature。
# 路径 src-tauri/locales/{en,zh-CN}.json，fallback = "en"（找不到 key 时回退英文 key）。
# 关键约定：tr!("key", param = value) 的占位符命名 = JSON 里 `{name}` —— 见
# memory/musage-i18n-conventions.md
rust-i18n = "3"

# macOS 私有 API —— PinBottom 模式需要直接操作 NSWindow.level 把窗口
# 放到 kCGNormalWindowLevel - 1（所有正常 app 窗口之下），仅 macOS 需要。
# NSMenu feature：fullscreen watcher 通过 `NSMenu.menuBarVisible` 类方法
# 探测当前是否在全屏状态（菜单栏不可见 → 大概率是有 app 在全屏）。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSMenu"] }
objc2-core-graphics = { version = "0.3", features = ["CGWindowLevel", "CGGeometry"] }
# NSRect (= CGRect) 来自 objc2-core-foundation，开启对应 feature 后 NSGeometry alias 才生效。
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString", "objc2-core-foundation"] }

# Win 端 hover tracker 用：GetCursorPos / GetWindowRect / WindowFromPoint。
# 跟 tao 用的 windows-sys 0.59 对齐（API 一致 + 不需要再升一档）。
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  # Win32_UI_HiDpi 用于 SetProcessDpiAwarenessContext —— 2026-07-06 全量
  # 审查 H2 fix: 保证 GetCursorPos / GetWindowRect 在多 DPI 屏之间用同一虚拟坐标系,
  # 避免 100% DPI 屏拖到 175% DPI 屏时 hover 检测挂掉。
  "Win32_UI_HiDpi",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# 改动 (2026-07-06 全量审查 C3 fix): panic = "abort" → "unwind"。
# 理由：tray.rs / xiaomi_login.rs / providers/* 里有多个
# `tauri::async_runtime::spawn` 包裹 fetch/cookie 提取逻辑。这些 task 内部
# 有 `.unwrap()` (未来 schema 漂移 / Option 类型不匹配 / serde 拒绝 时)。abort
# 模式下任何一个 spawn panic → 进程 abort → 托盘 / 浮窗 / in-flight 状态
# 全部丢失,用户体验是"应用消失"。unwind 让 spawn panic 被 tokio runtime
# 捕获,主进程继续。
#
# 兜底: xiaomi_login.rs:172 已有 `ExtractingGuard` RAII guard 强制 reset
# 提取锁,unwind 路径下 Drop glue 仍运行。
#
# 代价: release binary 大小 +~0.3%（unwind tables），可忽略。
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
# v0.2.1: strip = true removed.
# 与 rust-i18n 3.x 的 Lazy<HashMap> 存储冲突 —— Windows MSVC 链接器在 strip
# 阶段会把 HashMap 字面量的 backing 数据段当作 unreferenced 丢掉，导致 release
# binary 里 backend 是空的，t!() 全部回退到 "locale.key" 字面量。
# 见 longbridge/rust-i18n #115 (upstream 在 Windows 上踩过同样的坑)。
# 代价:Windows NSIS 体积 +~50 KB（12 MB → ~12.05 MB），不影响功能。
